force-app/main/default/objects/Travel_Fund_Request_Line_Item__c/Travel_Fund_Request_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Travel Fund Request Line Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Fund Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>