force-app/main/default/objects/Travel_Fund_Request_Line_Item__c/fields/Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Description__c</fullName>
    <label>Line Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>