force-app/main/default/objects/Travel_Fund_Request_Line_Item__c/fields/Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Line_Status__c</fullName>
    <label>Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>