force-app/main/default/objects/Travel_Fund_Request_Line_Item__c/fields/SUGARCRM_GUID__c.field-meta.xml
<CustomField>
    <fullName>SUGARCRM_GUID__c</fullName>
    <externalId>true</externalId>
    <label>SUGARCRM GUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>