force-app/main/default/objects/Travel_Fund_Request_Line_Item__c/fields/TFRLid__c.field-meta.xml
<CustomField>
    <fullName>TFRLid__c</fullName>
    <label>TFRLid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>