force-app/main/default/objects/Travel_Fund_Request_Line_Item__c/fields/TFRLineitemid__c.field-meta.xml
<CustomField>
    <fullName>TFRLineitemid__c</fullName>
    <formula>Id</formula>
    <label>TFRLineitemid</label>
    <type>Text</type>
</CustomField>