force-app/main/default/objects/Travel_Fund_Request_Line_Item__c/fields/Travel_Fund_Request__c.field-meta.xml
<CustomField>
    <fullName>Travel_Fund_Request__c</fullName>
    <label>Travel Fund Request</label>
    <referenceTo>Travel_Fund_Request__c</referenceTo>
    <relationshipLabel>Travel Fund Request Line Items</relationshipLabel>
    <relationshipName>Travel_Fund_Request_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>