force-app/main/default/objects/Travel_Fund_Request_Line_Item__c/fields/TravelFundLineId__c.field-meta.xml
<CustomField>
    <fullName>TravelFundLineId__c</fullName>
    <formula>Id</formula>
    <label>TravelFundLineId</label>
    <type>Text</type>
</CustomField>