force-app/main/default/objects/Travel_Fund_Request_Line_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>